--- a/restaurante-api-gateway-zuul/src/main/resources/application.properties
+++ b/restaurante-api-gateway-zuul/src/main/resources/application.properties
@@ -6,7 +6,12 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 zuul.routes.res-system.service-id=restaurante-system
 zuul.routes.res-system.path=/restaurante-system/**
 
-zuul.routes.oauth.sensitive-headers=Cookie,Set-Cookie
+zuul.routes.res-user.service-id=restaurante-user
+zuul.routes.res-user.path=/restaurante-user/**
+
+zuul.routes.res-oauth.service-id=restaurante-oauth
+zuul.routes.res-oauth.path=/restaurante-oauth/**
+zuul.routes.res-oauth.sensitive-headers=Cookie,Set-Cookie
 
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=45000
 ribbon.ConnectTimeout=10000
