--- a/restaurante-api-gateway-zuul/src/main/resources/bootstrap.properties
+++ b/restaurante-api-gateway-zuul/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
 spring.application.name=restaurante-api-gateway-zuul
-spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.uri=http://ws-restaurante-config-server:8888
 
 management.endpoints.web.exposure.include=*
