--- a/restaurante-config-server/src/main/resources/application.properties
+++ b/restaurante-config-server/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.cloud.config.server.git.default-label=main
 server.port=8888
 
 spring.cloud.config.server.git.uri=https://github.com/queirozdaniel/restaurante-workspace
-spring.cloud.config.server.git.search-paths= /ms-configuration/restaurante-system
+spring.cloud.config.server.git.search-paths= /ms-configuration/restaurante-system, /ms-configuration
