--- a/restaurante-system/src/main/resources/bootstrap.properties
+++ b/restaurante-system/src/main/resources/bootstrap.properties
@@ -1,5 +1,5 @@
 spring.application.name=restaurante-system
-spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.uri=http://ws-restaurante-config-server:8888
 
 spring.profiles.active=prod
 
