--- a/ms-configuration/restaurante-system/restaurante-system-prod.properties
+++ b/ms-configuration/restaurante-system/restaurante-system-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/restaurante?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql-restaurante:5432/restaurante?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=toor
 
