--- a/restaurante-api-gateway-zuul/src/main/resources/application.properties
+++ b/restaurante-api-gateway-zuul/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=restaurante-api-gateway-zuul
 server.port=8765
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://ws-restaurante-eureka-server:8761/eureka
 
 zuul.routes.res-system.service-id=restaurante-system
 zuul.routes.res-system.path=/restaurante-system/**
