--- a/restaurante-oauth/src/main/resources/application.properties
+++ b/restaurante-oauth/src/main/resources/application.properties
@@ -4,4 +4,4 @@ server.port=${PORT:0}
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 # Eureka Client
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://ws-restaurante-eureka-server:8761/eureka
