--- a/restaurante-user/src/main/resources/application.properties
+++ b/restaurante-user/src/main/resources/application.properties
@@ -4,13 +4,14 @@ server.port=${PORT:0}
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 # Eureka Client
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://ws-restaurante-eureka-server:8761/eureka
 
 # Database configuration
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://mysql-restaurante-user:5433/restaurante-user?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=toor
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
